test/resolver/pass/module_lib.ms
const foo := 42;
const bar := 100;
export { foo };
